# stable-virtual-camera

./: LICENSE  README.md  demo.py  demo_gr.py  pyproject.toml  run.py
benchmark/: README.md  export_reconfusion_example.py
docs/: CLI_USAGE.md
seva/: data_io.py  eval.py  geometry.py  gui.py  model.py  preproc.py  render.py  sampling.py  utils.py
seva/modules/: layers.py  transformer.py
